<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom|center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/question_text" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:layout_weight="10" />

        <Button
            android:id="@+id/answer0Button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/answer_0" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/answer1Button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/answer_1" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/answer2Button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/answer_2" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/answer3Button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/answer_3" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="278dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/fiftyFiftyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fifty_fifty_button" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reset_button" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>